# libCppGUI

./: .gitignore  .gitmodules  CMakeLists.txt  ConanDeps.cmake  README.md  TODO.txt  conanfile.py  conanfile.txt  log.txt
designer/: CMakeLists.txt  Main_window.cpp  Main_window.hpp  Test_window.cpp  Test_window.hpp  libcppgui_inst.cpp  main.cpp
docs/: .gitignore  Classes.class.violet.html  Container_layouter.cdr  Focus.txt  Styles.txt  UI.cdr  aspect_selector.cpp  aspect_selector_2.cpp  aspect_selector_3.cpp  aspects.cpp  aspects2.cpp  example1.cpp  project gui.txt
docs/aspects/: Aspects.cdr  Aspects_via_multiple_inheritance.cdr  aspect-chaining.cdr  main.md
docs/project_gui/: project_gui.md
fontrasterizer/: CMakeLists.txt  config.cmake.in  configure.bat  main.cpp
fontrasterizer/testapp/: CMakeLists.txt  TextRenderer.cpp
lib/: CMakeLists.txt  cppgui_config.in.hpp
lib/baked_fonts/: BakeFontFile.cmake  CMakeLists.txt  conanfile.txt  cppgui_baked_fonts_config.in.hpp
lib/baked_fonts/include/cppgui/: baked_fonts.hpp
lib/baked_fonts/rasterizer/: CMakeLists.txt  main.cpp
lib/baked_fonts/rasterizer/cmake/: FindFreetype.cmake
lib/baked_fonts/rasterizer/testapp/: TextRenderer.fragment.glsl  TextRenderer.hpp  TextRenderer.vertex.glsl  main.cpp
lib/baked_fonts/rasterizer/testapp/OpenGL/: error.hpp
lib/baked_fonts/src/: baked_fonts.cpp
lib/builtin_drivers/: platform_driver_spec.txt
lib/builtin_drivers/platform_sdl2/: CMakeLists.txt
lib/builtin_drivers/platform_sdl2/include/cppgui/builtin_drivers/: SDL2_application.hpp  SDL2_exception.hpp  SDL2_window.hpp  platform_sdl2.hpp  sdl2_custom_events.hpp
lib/builtin_drivers/platform_sdl2/src/: SDL2_application.cpp  SDL2_window.cpp  custom_events.cpp  custom_events.hpp  platform_sdl2.cpp
lib/builtin_drivers/renderer_opengl/: CMakeLists.txt  cppgui_opengl_config.in.hpp
lib/builtin_drivers/renderer_opengl/include/cppgui/: renderer_opengl.hpp
lib/builtin_drivers/renderer_opengl/include/cppgui/builtin_drivers/: OpenGL_renderer.hpp  gl.h  import_gl.hpp  renderer_opengl.hpp
lib/builtin_drivers/renderer_opengl/src/: OpenGL_renderer.cpp  fragment.glsl  gl.h  gl_shaderprogram.cpp  gl_shaderprogram.hpp  gl_wrappers.hpp  renderer_opengl.cpp  shaders.cpp  vertex.glsl
lib/builtin_drivers/session_sdl2/: CMakeLists.txt
lib/builtin_drivers/session_sdl2/include/cppgui/builtin_drivers/: session_sdl2.hpp
lib/builtin_drivers/session_sdl2/src/: session_sdl2.cpp
lib/include/cppgui/: Abstract_container.hpp  Abstract_container.ipp  Abstract_widget.hpp  Application.hpp  Bbox.hpp  Box.hpp  Box.ipp  Box_model.hpp  Box_model.ipp  Boxed.hpp  Button.hpp  Button.ipp  Canvas.hpp  Canvas.ipp  Cheap_resource_mapper.hpp  Cheap_resource_mapper.ipp  Checkbox.hpp  Checkbox.ipp  Container.hpp  Container.ipp  Container_base.hpp  Container_base.ipp  Container_layouter.hpp  Container_layouter.ipp  Custom_widget.hpp  Custom_widget.ipp  Default_font.hpp  Default_font.ipp  Default_font_mapper.hpp  Default_widgets.hpp  Default_widgets.ipp  Drag_controller.hpp  Drag_controller.ipp  Dropdown_button.hpp  Extents.hpp  Font_resources.hpp  Font_resources.ipp  Frame.hpp  Frame.ipp  Full_resource_mapper.hpp  (+67 more)
lib/include/cppgui/fonts/: Rasterized_font.hpp  bounding_box.hpp  cereal.hpp  character_range.hpp  character_set.hpp  rasterized_glyph_cbox.hpp  store.hpp
lib/src/: Abstract_container.cpp  Abstract_widget.cpp  Application.cpp  Bbox.cpp  Box.cpp  Box_model.cpp  Button.cpp  Canvas.cpp  Checkbox.cpp  Container.cpp  Default_font.cpp  Dropdown_button.cpp  Extents.cpp  Font_resources.cpp  Glyph_button.cpp  Grid_container.cpp  Icon_resources.cpp  Internal_popup.cpp  Internal_popup_zone.cpp  Label.cpp  Listbox.cpp  Positioned_bbox.cpp  Rectangle.cpp  Root_widget.cpp  Scrolling_container.cpp  Stylesheet.cpp  Text_widget.cpp  Textbox.cpp  UI_builder.cpp  UI_element.cpp  Vertical_scrollbar.cpp  Widget.cpp  Window.cpp  dummy.cpp  layouting.cpp  styles.cpp
lib/tests/: geometry.cpp  rectangle.cpp
sdl/: CMakeLists.txt
sdl/include/cppgui/sdl/: Application.hpp  Application.ipp  Default_configuration.hpp  Mouse_adapter.hpp  OpenGL_adapter.hpp  Window.hpp  Window.ipp  error_handling.hpp  keyboard_adapter.hpp
sdl/skeleton/: CMakeLists.txt
sdl/src/: dummy.cpp
test_app/: Application.cpp  Application.hpp  Application.ipp  CMakeLists.txt  Fonts.cpp  Fonts.hpp  Main_window.cpp  Main_window.hpp  Popup_test_button.cpp  Popup_test_button.hpp  SDL_application.cpp  SDL_application.hpp  SDL_exception.hpp  SDL_window.cpp  SDL_window.hpp  Test_window.cpp  Test_window.hpp  Test_window.ipp  Test_window_old.cpp  Text_input_dialog.hpp  Text_input_dialog.ipp  Window.cpp  Window.hpp  Window.ipp  libcppgui_inst.cpp  main.cpp
tests/: CMakeLists.txt  test_geometry.cpp
